--- a/rodanandfields-clone/package.json
+++ b/rodanandfields-clone/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^7.2.1",
     "i": "^0.3.7",
+    "json-server": "^0.17.0",
     "npm": "^8.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "server": "json-server db.json --port 8080 --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
