--- a/rodanandfields-clone/package.json
+++ b/rodanandfields-clone/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "sass": "^1.54.5",
     "swiper": "^8.3.2",
     "swiper-react": "^1.0.0",
